crates/dreamd-cli/tests/snapshots/cli_help__service_help.snap
---
source: crates/dreamd-cli/tests/cli_help.rs
expression: "subcommand_help(\"service\")"
---
Manage the per-user service that runs `dreamd watch` (Linux systemd --user unit / macOS LaunchAgent / Windows scheduled task)

Usage: service <COMMAND>

Commands:
  install    Write a user-scope service for `dreamd watch` and enable it now (Linux systemd --user / macOS LaunchAgent / Windows scheduled task)
  start      Start the user-scope service (systemctl --user start / launchctl kickstart)
  restart    Bounce the user-scope service (systemctl --user restart / launchctl kickstart -k)
  status     Report whether the user-scope service is running (systemd / launchd). Daemon-level liveness (UDS) is `dreamd status`
  uninstall  Remove the user-scope service. Never deletes per-project .agent/ stores
  help       Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help
