crates/dreamd-cli/tests/snapshots/cli_help__service_install_help.snap
---
source: crates/dreamd-cli/tests/cli_help.rs
expression: "nested_subcommand_help(\"service\", \"install\")"
---
Write a user-scope service for `dreamd watch` and enable it now (Linux systemd --user / macOS LaunchAgent)

Usage: install [OPTIONS]

Options:
      --force
          Overwrite an existing LaunchAgent plist (macOS) or scheduled-task XML (Windows). No effect on Linux

  -h, --help
          Print help
