crates/dreamd-cli/tests/snapshots/cli_help__service_restart_help.snap
---
source: crates/dreamd-cli/tests/cli_help.rs
expression: "nested_subcommand_help(\"service\", \"restart\")"
---
Bounce the user-scope service (systemctl --user restart / launchctl kickstart -k)

Usage: restart

Options:
  -h, --help
          Print help
