crates/dreamd-cli/tests/snapshots/cli_help__service_start_help.snap
---
source: crates/dreamd-cli/tests/cli_help.rs
expression: "nested_subcommand_help(\"service\", \"start\")"
---
Start the user-scope service (systemctl --user start / launchctl kickstart)

Usage: start

Options:
  -h, --help
          Print help
