crates/dreamd-cli/tests/snapshots/cli_help__service_status_help.snap
---
source: crates/dreamd-cli/tests/cli_help.rs
expression: "nested_subcommand_help(\"service\", \"status\")"
---
Report whether the user-scope service is running (systemd / launchd). Daemon-level liveness (UDS) is `dreamd status`

Usage: status

Options:
  -h, --help
          Print help
