crates/dreamd-cli/tests/snapshots/cli_help__top_level_help.snap
---
source: crates/dreamd-cli/tests/cli_help.rs
expression: top_help()
---
Portable memory layer for AI coding agents

Usage: dreamd [COMMAND]

Commands:
  archive         Maintain the on-disk memory log. Today: unpin entries with --force-unpin
  blame           Show which stored memories drove a query's recall ranking
  doctor          Run health checks and print status (dream-cycle mode, etc.)
  dream           Run a dream cycle: write LESSONS.md and prune decayed episodic events. Uses a configured LLM, or the deterministic exemplar when there is no key
  forget          Remove one episodic event and the lesson state that names it
  init            Scaffold a new per-project .agent/ store and register it. An existing .agent/ is left unchanged and is not registered
  mcp             Start the MCP server (bridges to daemon if running, otherwise in-process)
  memory          Name memory snapshots as branches and check them out
  migrate         Migrate episodic schema versions. The only path is 1.0.0 to 1.0.0, a no-op
  recall          Search stored memories by query, ranked by relevance and importance (markdown table)
  score           List the top-N stored memories by importance, without a search query
  salience-drift  Report the salience distribution, top clusters, and drift against the snapshot from 7 days ago
  reset           Reset scratch state. Today only `workspace` is supported
  service         Manage the per-user service that runs `dreamd watch` (Linux systemd --user unit / macOS LaunchAgent / Windows scheduled task)
  setup           Front door: scaffold .agent/ (via init) and print the harness wiring next steps
  status          Print daemon liveness, resolved project, last dream cycle, and recent log
  uninstall       Stop local dreamd servers, unregister this project, and clear caches
  update          Clear the native binary cache so `npx -y dreamd-mcp` fetches latest
  watch           Run the daemon in foreground mode. Blocks until SIGINT/SIGTERM
  vectors         Download the optional embedding model. Recall is unchanged
  version         Print structured version information (semver, commit, build date, target, schema)
  help            Print this message or the help of the given subcommand(s)

Options:
  -V, --version
          Print version information

  -h, --help
          Print help
