crates/dreamd-cli/tests/snapshots/cli_help__update_help.snap
---
source: crates/dreamd-cli/tests/cli_help.rs
expression: "subcommand_help(\"update\")"
---
Clear the native binary cache so `npx -y dreamd-mcp` fetches latest

Usage: update [OPTIONS]

Options:
      --dry-run
          Print the current version and planned actions without changing anything

  -q, --quiet
          Suppress non-essential output (errors still print to stderr)

      --restart
          Explicitly stop local `dreamd mcp` / `dreamd watch` (already the default; nothing is relaunched for you)

  -h, --help
          Print help
